# rksuid-cli

./: .travis.yml  Cargo.toml  README.md
src/: main.rs
tests/: core.rs
