[package]
name = "rksuid-cli"
version = "0.1.0"
authors = ["Nicholas Harring <nharring@users.noreply.github.com>"]
edition = "2018"
readme="README.md"
license="MIT"
keywords=["ksuid", "uuid"]
description="Command line client for creating and deserializing Ksuids using rksuid crate"



[dependencies]
rksuid = "0.2.0"
structopt = "0.2.10"
